# pronielts

./: .gitignore  IMPLEMENTATION_TRACKER.md  README.md  docker-compose.yml  pronunciation_app_docs.md
.github/: SECRETS.md
.github/workflows/: backend-ci.yml  infrastructure-deploy.yml  mobile-ci.yml  terraform-state-setup.yml  web-ci.yml
automation/docs/: README.md  architecture.md  data_flow.md  hardware_requirements.md  infrastructure.md  integration.md
backend/: .env.example  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_01_23_2238-e1dcb526f75f_initial_schema.py  2026_01_24_2200-add_categories_table.py  2026_01_30_1921-90d5fe157880_.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: assessments.py  categories.py  dialogs.py  phrases.py  users.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  assessment.py  category.py  dialog.py  phrase.py  user.py
backend/app/schemas/: assessment.py  category.py  dialog.py  phrase.py  user.py
backend/app/services/: blob_service.py  encryption_service.py  speech_service.py
backend/tests/: conftest.py  test_assessments.py  test_blob_service.py  test_dialogs.py  test_encryption_service.py  test_health.py  test_phrases.py  test_speech_service.py  test_users.py
docs/: api_spec.md  architecture.md  azure_setup_guide.md  database_schema.md
infrastructure/scripts/: seed_database.sql
infrastructure/terraform/: README.md
infrastructure/terraform/environments/dev/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
infrastructure/terraform/modules/app_service/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/blob_storage/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/key_vault/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/resource_group/: main.tf  variables.tf
infrastructure/terraform/modules/speech_service/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/sql_database/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/static_web_app/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/shared/backend-setup/: main.tf  outputs.tf  variables.tf
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/example/pronielts/: MainActivity.kt
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile/macos/Runner/: Info.plist
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: widget_test.dart
web/: package-lock.json  package.json
web/src/: App.tsx
web/src/components/categories/: CategoryForm.tsx
web/src/components/dashboard/: StatsCard.tsx
web/src/components/dialogs/: DialogForm.tsx  PhraseForm.tsx
web/src/components/layout/: Sidebar.tsx
web/src/config/: auth.ts
web/src/hooks/: useAuth.ts  useCategories.ts  useDialogs.ts
web/src/pages/: CategoryManagement.tsx  Dashboard.tsx  DialogManagement.tsx  Login.tsx  UserManagement.tsx
web/src/services/: api.ts
web/src/types/: index.ts
